[EventDataVisitor] Place events without start date at end date

This avoids an infinite loop.
Thanks Dmitry Nezhevenko for investigating.

CHANGELOG: Fixed an issue that would cause Plasma to freeze when there was an agenda item with no start date in the calendar

BUG: 367541

Differential Revision: https://phabricator.kde.org/D9811